--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
 crispy-bootstrap5==2024.2
+dj-database-url==2.1.0
 Django==5.0.4
 django-crispy-forms==2.1
 gunicorn==22.0.0
 Pillow==9.3.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 sqlparse==0.4.3
 whitenoise==6.6.0
-
